fixed spacing between cards

--- a/src/webparts/reactMyGroups/components/GridList/GridLayout.module.scss
+++ b/src/webparts/reactMyGroups/components/GridList/GridLayout.module.scss
@@ -3,7 +3,7 @@
 :export {
   padding: 20;
   minWidth: 210;
-  maxWidth: 320;
+  maxWidth: 286;
   compactThreshold: 480;
   rowsPerPage: 3;
 }
@@ -19,55 +19,16 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-between;
+  // justify-content: space-between;
+  margin-left:-10px;
+  margin-right:-10px;
  }
 
  :global(.ms-List-cell) {
   padding:10px;
 }
-  // :global(.ms-DocumentCard) {
-  //   position: relative;
-  //   background-color: $ms-color-white;
-  //   height: 100%;
-
-  //   // &:global(.ms-DocumentCard--compact) {
-  //   //   :global(.ms-DocumentCardPreview) {
-  //   //     -ms-flex-negative: 0;
-  //   //     flex-shrink: 0;
-  //   //     width: 144px;
-  //   //   }
-  //   // }
-
-  //   :global(.ms-DocumentCardPreview-icon) img {
-  //     width: 32px;
-  //     height: 32px;
-  //   }
-  // }
-
-  // :global(.ms-DocumentCard) {
-  //   min-width: 212px;
-  //   max-width: 286px;
-
-  //   :global(.ms-DocumentCardActivity) {
-  //     padding-bottom: 16px;
-  //   }
-
-  //   :global(.ms-DocumentCardTile-titleArea) {
-  //     height: 81px;
-  //   }
-
-  //   :global(.ms-DocumentCardLocation) {
-  //     padding: 12px 16px 5px 16px;
-  //     overflow: hidden;
-  //     text-overflow: ellipsis;
-  //   }
-  // }
 
 
-  // .rendergrid{
-  //   margin-right:20px;
-
-  // }
 
 
 
