--- a/src/webparts/reactMyGroups/components/reactMyGroups/ReactMyGroups.module.scss
+++ b/src/webparts/reactMyGroups/components/reactMyGroups/ReactMyGroups.module.scss
@@ -4,8 +4,8 @@
 
   .siteCard {
     height: 250px;
-    width: 315px;
-    // width:286px;
+    // width: 315px;
+    width:286px;
     box-sizing: border-box;
     margin-bottom: 20px;
     outline: transparent;
